automation/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hrms-backend
  namespace: hrms

spec:

  replicas: 2

  selector:

    matchLabels:

      app: hrms-backend

  template:

    metadata:

      labels:

        app: hrms-backend

    spec:

      containers:

      - name: hrms-backend

        image: hrms-backend:latest

        imagePullPolicy: Never

        ports:

        - containerPort: 3000

        volumeMounts:

        - name: hrms-storage

          mountPath: /usr/src/app/data

      volumes:

      - name: hrms-storage

        persistentVolumeClaim:

          claimName: hrms-pvc
