automation/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hrms-service
  namespace: hrms

spec:

  selector:

    app: hrms-backend

  ports:

  - port: 80

    targetPort: 3000

    protocol: TCP

  type: ClusterIP
