automation/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hrms-ingress
  namespace: hrms

spec:

  ingressClassName: traefik

  rules:

  - host: hrms.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: hrms-service

            port:

              number: 80
